OO-3584: remove last bits of unpublished pseudo status, remove some implementations of repository entry which was only used by one method